# display

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  example.cpp
example/navig/: CMakeLists.txt  navig.cpp
include/display/: display.hpp  element.hpp  layout.hpp  layout_free.hpp  layout_pivot.hpp  layout_rigid.hpp  pane.hpp  screen.hpp  types.hpp  utility.hpp  widget.hpp  window.hpp  window_padd.hpp  window_pivot.hpp
source/: display.cpp  element.cpp  layout.cpp  layout_free.cpp  layout_pivot.cpp  layout_rigid.cpp  screen.cpp  window.cpp  window_padd.cpp  window_pivot.cpp
test/: CMakeLists.txt
test/source/: utility_test.cpp
